@@ -53,13 +53,13 @@ def fetch_steps(self, br_a, br_b, writable_a):
     self.assertFalse(repo_b.has_revision(br_a.revision_history()[3]))
     self.assertTrue(repo_b.has_revision(br_a.revision_history()[2]))
     self.assertEquals(len(br_b.revision_history()), 7)
-    self.assertEquals(br_b.fetch(br_a, br_a.revision_history()[2])[0], 0)
+    br_b.fetch(br_a, br_a.revision_history()[2])
     # branch.fetch is not supposed to alter the revision history
     self.assertEquals(len(br_b.revision_history()), 7)
     self.assertFalse(repo_b.has_revision(br_a.revision_history()[3]))
 
     # fetching the next revision up in sample data copies one revision
-    self.assertEquals(br_b.fetch(br_a, br_a.revision_history()[3])[0], 1)
+    br_b.fetch(br_a, br_a.revision_history()[3])
     self.assertTrue(repo_b.has_revision(br_a.revision_history()[3]))
     self.assertFalse(has_revision(br_a, br_b.revision_history()[6]))
     self.assertTrue(br_a.repository.has_revision(br_b.revision_history()[5]))
@@ -67,22 +67,20 @@ def fetch_steps(self, br_a, br_b, writable_a):
     # When a non-branch ancestor is missing, it should be unlisted...
     # as its not reference from the inventory weave.
     br_b4 = self.make_branch('br_4')
-    count, failures = br_b4.fetch(br_b)
-    self.assertEqual(count, 7)
-    self.assertEqual(failures, [])
+    br_b4.fetch(br_b)
 
-    self.assertEqual(writable_a.fetch(br_b)[0], 1)
+    writable_a.fetch(br_b)
     self.assertTrue(has_revision(br_a, br_b.revision_history()[3]))
     self.assertTrue(has_revision(br_a, br_b.revision_history()[4]))
 
     br_b2 = self.make_branch('br_b2')
-    self.assertEquals(br_b2.fetch(br_b)[0], 7)
+    br_b2.fetch(br_b)
     self.assertTrue(has_revision(br_b2, br_b.revision_history()[4]))
     self.assertTrue(has_revision(br_b2, br_a.revision_history()[2]))
     self.assertFalse(has_revision(br_b2, br_a.revision_history()[3]))
 
     br_a2 = self.make_branch('br_a2')
-    self.assertEquals(br_a2.fetch(br_a)[0], 9)
+    br_a2.fetch(br_a)
     self.assertTrue(has_revision(br_a2, br_b.revision_history()[4]))
     self.assertTrue(has_revision(br_a2, br_a.revision_history()[3]))
     self.assertTrue(has_revision(br_a2, br_a.revision_history()[2]))
@@ -90,14 +88,13 @@ def fetch_steps(self, br_a, br_b, writable_a):
     br_a3 = self.make_branch('br_a3')
     # pulling a branch with no revisions grabs nothing, regardless of
     # whats in the inventory.
-    self.assertEquals(br_a3.fetch(br_a2)[0], 0)
+    br_a3.fetch(br_a2)
     for revno in range(4):
         self.assertFalse(
             br_a3.repository.has_revision(br_a.revision_history()[revno]))
-    self.assertEqual(br_a3.fetch(br_a2, br_a.revision_history()[2])[0], 3)
+    br_a3.fetch(br_a2, br_a.revision_history()[2])
     # pull the 3 revisions introduced by a@u-0-3
-    fetched = br_a3.fetch(br_a2, br_a.revision_history()[3])[0]
-    self.assertEquals(fetched, 3, "fetched %d instead of 3" % fetched)
+    br_a3.fetch(br_a2, br_a.revision_history()[3])
     # InstallFailed should be raised if the branch is missing the revision
     # that was requested.
     self.assertRaises(errors.InstallFailed, br_a3.fetch, br_a2, 'pizza')
@@ -122,7 +119,7 @@ class TestFetch(TestCaseWithTransport):
 
     def test_fetch_self(self):
         wt = self.make_branch_and_tree('br')
-        self.assertEqual(wt.branch.fetch(wt.branch), (0, []))
+        wt.branch.fetch(wt.branch)
 
     def test_fetch_root_knit(self):
         """Ensure that knit2.fetch() updates the root knit
@@ -284,7 +281,7 @@ class TestHttpFetch(TestCaseWithWebserver):
         wt.commit("changed file")
         target = BzrDir.create_branch_and_repo("target/")
         source = Branch.open(self.get_readonly_url("source/"))
-        self.assertEqual(target.fetch(source), (2, []))
+        target.fetch(source)
         # this is the path to the literal file. As format changes
         # occur it needs to be updated. FIXME: ask the store for the
         # path.
@@ -315,7 +312,7 @@ class TestHttpFetch(TestCaseWithWebserver):
         source = Branch.open(
             self.get_readonly_url("source/"),
             possible_transports=[source.bzrdir.root_transport])
-        self.assertEqual(target.fetch(source), (0, []))
+        target.fetch(source)
         # should make just two requests
         http_logs = self.get_readonly_server().logs
         self.log("web server logs are:")
